# NeuralPi

./: .gitmodules  CMakeLists.txt  README.md
Source/: AmpOSCReceiver.h  CMakeLists.txt  CabSim.cpp  CabSim.h  Eq4Band.cpp  Eq4Band.h  NeuralNetwork.cpp  NeuralNetwork.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h  SmoothingEffect.h
models/: BluesJR_FullD.json  BluesJr.json  HT40_Overdrive.json  TS9.json  TS9_FullD.json
modules/: CMakeLists.txt
